2015-02-20  Natalia Portillo  <claunia@claunia.com>

	* plist-cil.test.csproj:
	  

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* IssueTest.cs:
	  Different API between JUnit and NUnit made TestIssue49()
	  fail. Solved.

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* ParseTest.cs:
	  Should use a serializable object type.

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* ParseTest.cs:
	  Convert unix date to .net dates.
	Array.Equals() does not compare array internals but object
	  reference, implement substitute.
	String.Substring() has a different API than Java, correct.

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* IssueTest.cs:
	* plist-cil.test.csproj:
	  Implement IssueTest.

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* ParseTest.cs:
	* plist-cil.test.csproj:
	  Implement ParseTest

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* plist-cil.test.csproj:
	  Organize test-files in a folder

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* packages.config:
	* plist-cil.test.csproj:
	* Properties/AssemblyInfo.cs:
	  Add test skeleton.
